fix message scroll container bottom cut off issue

--- a/css/chata-styles.css
+++ b/css/chata-styles.css
@@ -150,7 +150,6 @@
     flex-shrink: 1;
     flex-basis: 0%;
     background: var(--autoql-vanilla-background-color-primary);
-    padding-top: 10px;
 }
 
 .autoql-vanilla-chata-scrollbox {
